# l-compiler

./: .clang-format  .gitignore  CMakeLists.txt  Gramatica e Semântica.txt  Makefile  codegen.c  file.c  hex_char_case.l  lexer.c  main.c  program.l  semantic_and_syntatic.h  symbol_table.c  symbol_table.h  test.sh  utils.h
include/: Lexer.h  SymbolTable.h  Syntatic.h  Token.h  Utils.h  codegen.h  file.h  file_view.h  lexer.h  semantic_and_syntatic.h  symbol_table.h  token.h  utils.h
l-samples/: const.l  integer.l  program.l  t01.l
src/: Lexer.cc  Main.cc  SymbolTable.cc  Syntatic.cc  Token.cc  Utils.cc  codegen.c  file.c  file_view.c  lexer.c  lexer.cc  main.c  semantic_and_syntatic.c  symbol_table.c  utils.c
test-cases/: attr_sr10.l  attr_sr6.l  attr_sr8.l  decl_var_sr2-1.l  decl_var_sr2-2.l  decl_var_sr2-3.l  decl_var_sr3.l  decl_var_sr4.l  f_sr14.l  f_sr6.l  f_sr8.l  readln_sr10.l  readln_sr8.l
test-cases/mc/: exp_1.l
test-cases/mf/: attr_sr10.l  attr_sr6.l  attr_sr8.l  attr_sr9.l  bracket_exp_sr7.l  decl_var_sr2-1.l  decl_var_sr2-2.l  decl_var_sr2-3.l  decl_var_sr3.l  decl_var_sr4.l  f_sr12.l  f_sr13.l  f_sr14.l  f_sr6.l  f_sr8.l  readln_sr10.l  readln_sr8.l
